# COSC360

./: .gitignore  .gitmodules  CMakeLists.txt  git.sh  hydra.sh
lab1/: CMakeLists.txt  famtree.c  grade.sh  makefile  person.c  person.h  tree_creator.c  tree_creator.h
lab1/input/: fam1.txt  fam6.txt
lab2/: CMakeLists.txt  ip_parser.c  ip_parser.h  l2p1.c  l2p2.c  l2p3.c  makefile
lab3/: CMakeLists.txt  compile.c  compile.h  fakemake.c
lab4/: CMakeLists.txt  jtar.c  makefile  tar_dir.h  tar_head.c  tar_head.h  tar_manager.c  tar_manager.h  tarer.h
lab5/: CMakeLists.txt  README.md  freelist.c  freelist.h  heap_print.c  heap_print.h  jmalloc.c  jmalloc.h  makefile  malloc.c  malloc.h
lab5/demo/: CMakeLists.txt  famtree.c  person.c  person.h  test.c
lab5/lab1/test/: famtree  gradescript
lab5/malloc_test/: CMakeLists.txt  malloc_test.c
lab6/: CMakeLists.txt  jsh  jsh.c  makefile  piper.c  piper.h  spawner.c  spawner.h
lab8/: CMakeLists.txt  jtalk.c  jtalk_server.c  makefile  server_tasks.c  server_tasks.h  socketfun.c
submissions/lab3/: CMakeLists.txt  fakemake.c  makefile
submissions/lab4/: jtar.c  tar_head.c  tar_head.h  tar_manager.c
