cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)

project(CS360Lab2)
enable_language(C)

option(PERSONAL "Builds lab 2 for a non-Hydra computer." OFF)

option(ALL "Builds all" ON)
option(PART1 "Builds l2p1" OFF)
option(PART2 "Builds l2p1" OFF)
option(PART3 "Builds l2p1" OFF)

if (CMAKE_VERSION VERSION_LESS "3.1")
    if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
        set (CMAKE_C_FLAGS "-std=c99 ${CMAKE_C_FLAGS}")
    endif()
else()
    set (CMAKE_C_STANDARD 99)
endif()

set (CMAKE_C_FLAGS "-Wall -g -O ${CMAKE_C_FLAGS}")

if(PERSONAL)
    file(GLOB fdr_src "${PROJECT_SOURCE_DIR}/../libfdr/src/*.c")
    file(GLOB fdr_headers "${PROJECT_SOURCE_DIR}/../libfdr/include/*.h")
    if(NOT TARGET fdr)
        add_library(fdr STATIC ${fdr_src} ${fdr_headers})
    endif()
endif()

file(GLOB lab2_src "${PROJECT_SOURCE_DIR}/*.c")
file(GLOB lab2_headers "${PROJECT_SOURCE_DIR}/*.h")

list(REMOVE_ITEM lab2_src "${PROJECT_SOURCE_DIR}/l2p1.c")
message(STATUS "list is ${lab2_src}")
list(REMOVE_ITEM lab2_src "${PROJECT_SOURCE_DIR}/l2p2.c")
list(REMOVE_ITEM lab2_src "${PROJECT_SOURCE_DIR}/l2p3.c")

add_library(l2 STATIC ${lab2_src} ${lab2_headers})

if(PERSONAL)
    include_directories(${PROJECT_SOURCE_DIR}/../libfdr/include)
else()
    include_directories(/home/plank/cs360/include)
endif()

if (PART1 OR ALL)
    add_executable(l2p1 "${PROJECT_SOURCE_DIR}/l2p1.c")
    if(PERSONAL)
        target_link_libraries(l2p1 PRIVATE fdr)
        target_link_libraries(l2p1 PRIVATE l2)
    else()
        target_link_libraries(l2p1 PRIVATE /home/plank/cs360/objs/libfdr.a)
        target_link_libraries(l2p1 PRIVATE l2)
    endif()
endif()

if (PART2 OR ALL)
    add_executable(l2p2 "${PROJECT_SOURCE_DIR}/l2p2.c")
    if(PERSONAL)
        target_link_libraries(l2p2 PRIVATE fdr)
        target_link_libraries(l2p2 PRIVATE l2)
    else()
        target_link_libraries(l2p2 PRIVATE /home/plank/cs360/objs/libfdr.a)
        target_link_libraries(l2p2 PRIVATE l2)
    endif()
endif()

if (PART3 OR ALL)
    add_executable(l2p3 "${PROJECT_SOURCE_DIR}/l2p3.c")
    if(PERSONAL)
        target_link_libraries(l2p3 PRIVATE fdr)
        target_link_libraries(l2p3 PRIVATE l2)
    else()
        target_link_libraries(l2p3 PRIVATE /home/plank/cs360/objs/libfdr.a)
        target_link_libraries(l2p3 PRIVATE l2)
    endif()
endif()
